--- a/public/index.html
+++ b/public/index.html
@@ -1,119 +1,204 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minh Hoàngg</title>
-    <link rel="stylesheet" href="MyWebPage.css">
+<html lang="vi">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Coming Soon… Từ 2023</title>
+    <meta name="description" content="Minh Hoàng - backend developer, realtime chat enthusiast, và người yêu các dự án tự động hoá nhỏ.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="socket.io/socket.io.js"></script>
-</head>
-<body>
-    <header>
-    <nav>
-        <ul>
-        <li class="nav-item ">
-            <a href="#personal-info">Thông tin cá nhân</a>
-        </li>
-        <li hidden class="nav-item">
-          <a href="#personal-projects">Bài tập về nhà ^^</a>
-        </li>
-        <li class="nav-item">
-          <a href="#chat-box">Chat Box</a>
-        </li>
-        <li class="nav-item">
-          <a href="#API">API</a>
-        </li>
-        <li class="nav-loginItem">
-          <a href="#login">
-            <ul>
-              <img src="https://minhhoang.info/images/meokhochuhu.png">
-            <span>Đăng Nhập Đê</span>
+    <link rel="stylesheet" href="styles/app.css">
+  </head>
+  <body>
+    <div class="app-shell">
+      <header class="site-header">
+        <div class="site-header__inner">
+          <a class="brand" href="#personal-info" data-view-link>Amator1</a>
+          <button class="nav-toggle" type="button" aria-label="Mở điều hướng" aria-controls="site-nav" aria-expanded="false" data-nav-toggle>
+            <span class="nav-toggle__line"></span>
+            <span class="nav-toggle__line"></span>
+            <span class="nav-toggle__line"></span>
+          </button>
+          <nav id="site-nav" class="site-nav" aria-label="Điều hướng chính" data-nav>
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#personal-info" data-view-link>Portfolio card</a>
+              </li>
+              <!--
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#personal-projects" data-view-link>Dự án</a>
+              </li>
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#chat-box" data-view-link>Chat box</a>
+              </li>
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#API" data-view-link>API</a>
+              </li>
+              -->
+              <li class="site-nav__item site-nav__item--profile">
+                <a class="site-nav__link site-nav__link--profile" href="#login">
+                  <img src="https://minhhoang.info/images/doglagging.png" alt="Đăng nhập đê, xem chùa à?">
+                  <span>Đăng nhập</span>
+                </a>
+              </li>
             </ul>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="personal-info" class="active">
-      <div class="avatar-section">
-        <img src="https://minhhoang.info/images/meokhochuhu.png" alt="avatar">
-      </div>
-      <div class="description-section">
-        <h2>Minh Hoàng</h2>
-        <p>--- More info ---</p>
-      </div>
-      <div class="social-section">
-        <a href="https://github.com/M1nhHoang" target="_blank" class="social-button">
-          <i class="fa fa-github"> GitHub</i>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=100032999859311" target="_blank" class="social-button">
-          <i class="fa fa-facebook"> Facebook</i>
-        </a>
-        <a href="https://www.youtube.com/@holeminhhoang" target="_blank" class="social-button">
-          <i class="fa fa-youtube"> Youtobe</i>
-        </a>
-      </div>
-    </section>
-    <section id="personal-projects">
-    </section>
-    <section id="chat-box">
-      <div id="chat-list">
-        <div id="chat-list-tittle">
-          <h2>Your Name</h2>
+          </nav>
         </div>
-        <div id="chat-list-items">
-          
-        </div>        
-      </div>
-      <div id="chat">
-        <div id="chat-target">
-          <img src="https://minhhoang.info/images/meokhochuhu.png">
-          <div id="person-info">
-            <h2>target-name</h2>
-            <span>last online</span>
-          </div>
-        </div>
-        <div id="chat-messages">
-        </div>
-        <form id="chat-form">
-          <input type="text" id="chat-input" autocomplete="off" placeholder="Type your message here...">
-          <button type="submit">Send</button>
-        </form>
-      </div>
-    </section>
-    <section id="API">
-        <div class="api-container">
-            <div class="api-header">/API/CHESS/<b style="color: black;">GETBESTMOVE</b></div>
-            <div class="api-content" style="display: none;">
-                <p>
-                    <strong>Example Request:</strong>
-                    <code>curl -X POST 'https://minhhoang.info/api/chess/getbestmove' -d 'fen=<b style="color: black;">3r1rk1/5ppp/2p1pn2/p1P5/1p2P3/3Q1P2/PP3P1P/3RR1K1 b</b>&time=<b style="color: black;">100</b>'
-                    </code>
-                </p>
-                <p>
-                    <strong>fen:</strong> 
-                    <code><a href="https://www.chess.com/terms/fen-chess">FEN</a> of board (ex: 3r1rk1/5ppp/2p1pn2/p1P5/1p2P3/3Q1P2/PP3P1P/3RR1K1 b)
-                    </code>
-                </p>
-                <p>
-                    <strong>time:</strong> 
-                    <code>Go move time ( The time limit for a chess engine to calculate a move is set. 1000 equals 1 second, and the maximum limit is 10 seconds, which is equivalent to 10000. ex: 100)
-                    </code>
-                </p>
-                <p>
-                    <strong>Response:</strong>
-                    <code>
-                        {"bestMove":"d8d3"}
-                    </code>
-                </p>
+      </header>
+
+      <main class="app-main">
+        <section id="personal-info" class="view view--active" data-view>
+          <article class="profile-card">
+            <div class="profile-card__media">
+              <img src="https://minhhoang.info/images/meokhochuhu.png" alt="Minh Hoàng">
             </div>
-        </div>
-    </section>
-  </main>
-  <footer>
-    <p></p>
-  </footer>
-  <script src="MyWebPage.js"></script>
-</body>
+            <div class="profile-card__body">
+              <p class="eyebrow">Full-time domain hoarder</p>
+              <h1>Yo, lạc đường à? :D</h1>
+              <p>
+                Trang này tồn tại chỉ vì mình chưa nỡ để domain expire.<br>
+                Nhặt lá đá ống bơ, có gì đó sắp tới rồi đó… chắc vậy.
+              </p>
+              <ul class="profile-card__meta">
+                <li><i class="fa fa-map-marker"></i> Đà Nẵng, Vietnam</li>
+                <li><i class="fa fa-envelope"></i> Không có mail, fill sau v:</li>
+                <li></i>🙏 “Please don’t DDoS me today”</li>
+              </ul>
+              <div class="profile-card__social">
+                <a href="https://github.com/M1nhHoang" target="_blank" rel="noreferrer" class="social-button">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100032999859311" target="_blank" rel="noreferrer" class="social-button">
+                  <i class="fa fa-facebook"></i> Facebook
+                </a>
+                <a href="https://www.youtube.com/@holeminhhoang" target="_blank" rel="noreferrer" class="social-button">
+                  <i class="fa fa-youtube"></i> YouTube
+                </a>
+              </div>
+            </div>
+          </article>
+        </section>
+
+        <!--
+        <section id="personal-projects" class="view" data-view>
+          <div class="section-heading">
+            <p class="eyebrow">Dự án nổi bật</p>
+            <h2>Các dự án cá nhân</h2>
+            <p>Một vài thứ nhỏ nhỏ mình đã ship gần đây. Nội dung được cập nhật qua JavaScript để dễ mở rộng sau này.</p>
+          </div>
+          <div id="project-board" class="project-board" aria-live="polite"></div>
+        </section>
+        -->
+
+        <!--
+        <section id="chat-box" class="view" data-view aria-live="polite">
+          <div class="section-heading">
+            <p class="eyebrow">Realtime playground</p>
+            <h2>Chat box</h2>
+            <p>Socket.IO giúp mình kết nối với bạn bè, mô phỏng bot và test ý tưởng.</p>
+          </div>
+          <div class="chat-grid">
+            <aside class="chat-panel" aria-label="Danh sách cuộc trò chuyện">
+              <div class="chat-panel__header">
+                <div>
+                  <p class="chat-panel__eyebrow">Đang đăng nhập</p>
+                  <h3 class="chat-panel__title" id="chat-owner">Your Name</h3>
+                </div>
+                <button type="button" class="ghost-button" id="refresh-chat-list">
+                  Làm mới
+                </button>
+              </div>
+              <label class="field field--search">
+                <span class="sr-only">Tìm kiếm</span>
+                <i class="fa fa-search" aria-hidden="true"></i>
+                <input type="search" id="chat-search" placeholder="Tìm kiếm liên hệ..." autocomplete="off">
+              </label>
+              <div id="chat-list">
+                <div id="chat-list-items" class="chat-groups"></div>
+              </div>
+            </aside>
+
+            <div class="chat-room" id="chat">
+              <header class="chat-room__header" id="chat-target">
+                <img id="chat-target-avatar" src="https://minhhoang.info/images/meokhochuhu.png" alt="Ảnh đại diện đang trò chuyện">
+                <div>
+                  <h3 id="chat-target-name">Chọn một liên hệ</h3>
+                  <p id="chat-target-status">Chưa có cuộc trò chuyện nào được chọn.</p>
+                </div>
+              </header>
+              <div class="chat-room__messages" id="chat-messages" aria-live="polite"></div>
+              <form class="chat-room__form" id="chat-form" autocomplete="off" novalidate>
+                <label class="sr-only" for="chat-input">Tin nhắn</label>
+                <input type="text" id="chat-input" placeholder="Nhập tin nhắn..." autocomplete="off">
+                <button type="submit">Gửi</button>
+              </form>
+            </div>
+          </div>
+        </section>
+        -->
+
+        <!--
+        <section id="API" class="view" data-view>
+          <div class="section-heading">
+            <p class="eyebrow">Mini services</p>
+            <h2>Tài liệu API</h2>
+            <p>Những endpoint nhỏ dùng cho hobby project. Vẫn đang được tối ưu mỗi tuần.</p>
+          </div>
+          <div class="api-stack">
+            <details class="api-card" open>
+              <summary>
+                <span>/api/chess/getBestMove</span>
+                <span class="badge badge--post">POST</span>
+              </summary>
+              <div class="api-card__body">
+                <p>AI lựa chọn nước cờ tiếp theo bằng engine Stockfish tuỳ biến.</p>
+                <p><strong>Request:</strong></p>
+                <pre><code>curl -X POST https://minhhoang.info/api/chess/getbestmove \
+-d "fen=3r1rk1/5ppp/2p1pn2/p1P5/1p2P3/3Q1P2/PP3P1P/3RR1K1 b" \
+-d "time=100"</code></pre>
+                <p><strong>Body</strong></p>
+                <ul>
+                  <li><code>fen</code>: chuỗi trạng thái bàn cờ <a href="https://www.chess.com/terms/fen-chess" target="_blank" rel="noreferrer">FEN</a>.</li>
+                  <li><code>time</code>: thời gian engine suy nghĩ (1000 = 1s, tối đa 10000).</li>
+                </ul>
+                <p><strong>Response:</strong></p>
+                <pre><code>{"bestMove":"d8d3"}</code></pre>
+              </div>
+            </details>
+            <details class="api-card">
+              <summary>
+                <span>/api/chatbot</span>
+                <span class="badge badge--post">POST</span>
+              </summary>
+              <div class="api-card__body">
+                <p>Chatbot đơn giản test flow hội thoại.</p>
+                <p><strong>Request:</strong> <code>{"message":"hello"}</code></p>
+                <p><strong>Response:</strong> <code>{"answer":"Hi, how can I help you?"}</code></p>
+              </div>
+            </details>
+            <details class="api-card">
+              <summary>
+                <span>/api/health</span>
+                <span class="badge badge--get">GET</span>
+              </summary>
+              <div class="api-card__body">
+                <p>Trạng thái nhanh của hệ thống và hàng đợi.</p>
+                <p><strong>Response:</strong> <code>{"uptime":"24h","workers":4,"status":"ok"}</code></p>
+              </div>
+            </details>
+          </div>
+        </section>
+        -->
+      </main>
+
+      <footer class="site-footer">
+        <p>© <span id="current-year"></span> Minh Hoàng. Build something fun.</p>
+      </footer>
+    </div>
+
+    <script src="socket.io/socket.io.js"></script>
+    <script type="module" src="scripts/app.js"></script>
+  </body>
 </html>
