--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/app.css?v=__ASSET_VERSION__">
   </head>
   <body>
     <div class="app-shell">
@@ -252,6 +252,6 @@
       </footer>
     </div>
 
-    <script type="module" src="/scripts/app.js"></script>
+    <script type="module" src="/scripts/app.js?v=__ASSET_VERSION__"></script>
   </body>
 </html>
